--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 .section{
